Changes in 1.1:
  o Server Changes:
    * Entitlement classes can now provide access to multiple access
      groups

Changes in @NEW@:
  o API Additions:
    * The interface to create, list and delete access groups and
      modify the users therein through is now exposed though
      ConaryClient.
    * The interface to delete entitlement groups is now exposed
      through ConaryClient.

  o Client Changes:
    * "conary updateall" now accepts the --keep-required command line
      argument.

  o Server Changes:
    * The repository database migration code now reports an error when
      trying to migrate old-style redirects.  The code to perform the
      migration is incomplete and creates invalid new-style
      redirects.  If you have a repository with old-style redirects,
      contact rPath for assistance with your migration. (CNY-590)

  o Bug Fixes:
    * Subdirectories within source components are now better supported.
      Specifically, different subdirectories with the same filename will
      now work. (CNY-617)
    * The util.literalRegex() function now escapes parenthesis characters.
      (CNY-630)
    * Manifest files now handle file names containing "%" characters.
      Fix from Pavel Volkovitskiy. (CNY-627)

Changes in 1.0.22:
  o Client Changes:
    * Conary now has hooks for allowing you to be prompted for both name
      and password when necessary.
    * Conary will no longer report a traceback when trying to perform 
      dependency resolution against repositories that are not available.
      Instead, it will print out a warning. (CNY-578)

  o Build Changes:
    * It is now possible to set environment variables to use within
      Conary builds from within conary configuration files, using the
      new "environment" configuration item.  Thanks to Pavel
      Volkovitskiy for implementing this feature. (CNY-592)
    * In previous versions of Conary, calls to r.PackageSpec() would