@@ -65,13 +65,13 @@ if len(otherArgs) < 2:
 
 if otherArgs[1] == 'add-entitlement':
     if len(otherArgs) != 5: usage()
-    repos.addEntitlement(otherArgs[2], otherArgs[3], otherArgs[4])
+    repos.addEntitlements(otherArgs[2], otherArgs[3], [ otherArgs[4] ])
 elif otherArgs[1] == 'create-class':
     if len(otherArgs) != 5: usage()
     repos.addEntitlementGroup(otherArgs[2], otherArgs[3], otherArgs[4])
 elif otherArgs[1] == 'delete-entitlement':
     if len(otherArgs) != 5: usage()
-    repos.deleteEntitlement(otherArgs[2], otherArgs[3], otherArgs[4])
+    repos.deleteEntitlement(otherArgs[2], otherArgs[3], [ otherArgs[4] ])
 elif otherArgs[1] == 'list-entitlements':
     if len(otherArgs) != 4: usage()
     print "\n".join(repos.listEntitlements(otherArgs[2], otherArgs[3]))
